testsuite/bsc.evaluator/uninit/VectorUninitErr1.bsv.bsc-ccomp-out.expected
checking package dependencies
compiling VectorUninitErr1.bsv
code generation for sysVectorUninitErr1 starts
Error: "VectorUninitErr1.bsv", line 6, column 25: (G0028)
  `v[4]' uses uninitialized value (the position shown is the object's
  declaration). If this error is unexpected, please consult KPNS #32.
  During elaboration of the body of rule `test' at "VectorUninitErr1.bsv",
  line 11, column 8.
  During elaboration of `sysVectorUninitErr1' at "VectorUninitErr1.bsv", line
  4, column 8.
